--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,11 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
+    <string name="round_counter">Round: %1$d</string>
     <string name="total_score">Total: %1$d</string>
+    <string name="round_score">Round %1$d: %2$d (%3$s for %4$s)</string>
+    <string name="button_roll">ROLL</string>
+    <string name="button_choose">CHOOSE</string>
+    <string name="button_new_game">NEW GAME</string>
+    <string name="spinner_description">Select a sum</string>
 </resources>
